noissue: extract all that setup box drama into .devboxrc so I dont have to ever touch setup.sh again